[gd_scene load_steps=11 format=3 uid="uid://cg6grwqirl4k6"]

[ext_resource type="Texture2D" uid="uid://cbjq1psi0y4h1" path="res://Assets/Image/Map/MAP.png" id="1_2anln"]
[ext_resource type="Script" uid="uid://c5x0y2gsp375o" path="res://Assets/Scenes/Object/Door/doors.gd" id="1_gwt4r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilsnn"]
atlas = ExtResource("1_2anln")
region = Rect2(265, 484, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uphk"]
atlas = ExtResource("1_2anln")
region = Rect2(282, 484, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc0k5"]
atlas = ExtResource("1_2anln")
region = Rect2(299, 484, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_egsgq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilsnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uphk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc0k5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ddqv"]
size = Vector2(16, 8)

[sub_resource type="Animation" id="Animation_lga8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_m0wwu"]
resource_name = "open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uq5ep"]
_data = {
&"RESET": SubResource("Animation_lga8n"),
&"open": SubResource("Animation_m0wwu")
}

[node name="Doors" type="Node2D"]
texture_filter = 1
script = ExtResource("1_gwt4r")

[node name="Door1" type="Area2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 0
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Door1"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_egsgq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_6ddqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door1"]
libraries = {
&"": SubResource("AnimationLibrary_uq5ep")
}

[node name="Door2" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 0
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Door2"]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_egsgq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_6ddqv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Door2"]
libraries = {
&"": SubResource("AnimationLibrary_uq5ep")
}

[connection signal="body_entered" from="Door1" to="." method="_on_door_1_body_entered"]
[connection signal="body_exited" from="Door1" to="." method="_on_door_1_body_exited"]
[connection signal="body_entered" from="Door2" to="." method="_on_door_2_body_entered"]
[connection signal="body_exited" from="Door2" to="." method="_on_door_2_body_exited"]
